Use `List.of` for the empty scan
CC:T doesn't seem to recognize `Collections.emptyList()` as a singleton list, and thus doesn't optimize for it